--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,8 +46,8 @@ cw2 = "0.13.2"
 schemars = "0.8.8"
 serde = { version = "1.0.137", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.31" }
-entropy_beacon_cosmos = { path = "../../packages/entropy_beacon_cosmos" }
-ecvrf = { path = "../../packages/ecvrf-rs" }
+entropy_beacon_cosmos = { version = "1.1", features = ["ecvrf"] }
+ecvrf-rs = "1.0"
 sha2 = "0.10.2"
 
 [dev-dependencies]
