--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "beacon"
-version = "1.0.1"
+version = "2.0.0"
 authors = ["Amit Prasad <mail@amitprasad.dev>"]
 edition = "2018"
 
@@ -46,7 +46,8 @@ cw2 = "0.13.2"
 schemars = "0.8.8"
 serde = { version = "1.0.137", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.31" }
-entropy_beacon_cosmos = { version = "1.1.1", features = ["ecvrf"] }
+#entropy_beacon_cosmos = { version = "1.1.1", features = ["ecvrf"] }
+entropy_beacon_cosmos = { path = "../../packages/entropy_beacon_cosmos", features = ["ecvrf"] }
 ecvrf-rs = "1.0"
 sha2 = "0.10.2"
 
