--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,8 +46,8 @@ cw2 = "0.16.0"
 schemars = "0.8.11"
 serde = { version = "1.0.147", default-features = false, features = ["derive"] }
 thiserror = { version = "1.0.37" }
-#entropy_beacon_cosmos = { version = "2.0.4", features = ["ecvrf"] }
-entropy_beacon_cosmos = { path = "../../packages/entropy_beacon_cosmos", features = ["ecvrf"] }
+entropy_beacon_cosmos = { version = "2.0.4", features = ["ecvrf"] }
+#entropy_beacon_cosmos = { path = "../../packages/entropy_beacon_cosmos", features = ["ecvrf"] }
 ecvrf-rs = "1.0"
 sha2 = "0.10.6"
 
